--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sander798/tinyapp#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
