--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
     "cookie-parser": "^1.4.6",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1"
   }
 }
