--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "tinyapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "A basic URL shortener with user profiles",
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "test": "mocha"
   },
   "repository": {
@@ -23,7 +22,8 @@
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
